# xml-conduit-generic

./: .gitignore  LICENSE  README.md  stack.yaml  xml-conduit-generic.cabal
Text/XML/Generic/: .ToXml.hs.swp  FromXml.hs  FromXmlUtil.hs  ToXml.hs  ToXmlUtil.hs
test/: testXml.hs
